# A-Causality-Based-AI-Engine-for-Detecting-and-Controlling-Misinformation

./: .gitignore  README.md  render.yaml
backend/: all_graphs.pkl  causal.py  inference.py  main.py  model.py  pipeline.py  pyproject.toml  requirements.txt  rumour_gat.pt  schemas.py  services.py  test.py  theory.json  utils.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/api/: [...slug].js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: CascadeList.jsx  GraphViz.jsx  InterventionPanel.jsx  ScoreChart.jsx  StatsCards.jsx
frontend/src/pages/: Dashboard.jsx  Home.jsx
